; ModuleID = '/home/carl/AnghaBench/esp-idf/components/spi_flash/test/extr_test_mmap.c_spi_flash_read_maybe_encrypted.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/spi_flash/test/extr_test_mmap.c_spi_flash_read_maybe_encrypted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i8*, i64)* @spi_flash_read_maybe_encrypted to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spi_flash_read_maybe_encrypted(i64 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = call i32 (...) @esp_flash_encryption_enabled()
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %15, label %10

10:                                               ; preds = %3
  %11 = load i64, i64* %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i64, i64* %7, align 8
  %14 = call i32 @spi_flash_read(i64 %11, i8* %12, i64 %13)
  store i32 %14, i32* %4, align 4
  br label %20

15:                                               ; preds = %3
  %16 = load i64, i64* %5, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load i64, i64* %7, align 8
  %19 = call i32 @spi_flash_read_encrypted(i64 %16, i8* %17, i64 %18)
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %15, %10
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i32 @esp_flash_encryption_enabled(...) #1

declare dso_local i32 @spi_flash_read(i64, i8*, i64) #1

declare dso_local i32 @spi_flash_read_encrypted(i64, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
